convert task objects into dom elements

--- a/src/template.html
+++ b/src/template.html
@@ -107,10 +107,7 @@
          <div class="task-view-container">
             <div class="task-view-title">Project Title</div>
             <div class="task-container">
-               <!-- <div class="task">
-                  <div class="checkbox"></div>
-                  <div class="task-content">task</div>
-               </div> -->
+               <!-- Tasks get added here -->
             </div>
          </div>
 
@@ -127,13 +124,22 @@
                   <div class="date-input-container">
                      <input class="date-input" required type="date">
                   </div>
-                  <div class="priority-input-container">
-                     Priority:
-                     <select class="priority-input">
-                        <option value="priority-low">LOW</option>
-                        <option value="priority-medium">MEDIUM</option>
-                        <option value="priority-high">HIGH</option>
-                     </select>
+                  <div class="task-details-container">
+                     <div class="priority-input-container">
+                        Priority:
+                        <select class="priority-input">
+                           <option value="LOW">LOW</option>
+                           <option value="MEDIUM">MEDIUM</option>
+                           <option value="HIGH">HIGH</option>
+                        </select>
+                     </div>
+                     <div class="project-input-container">
+                        Project:
+                        <select class="project-input">
+                           <option value="project1">placeholder</option>
+                           <option value="project2">placeholder</option>
+                        </select>
+                     </div>
                   </div>
                </div>
                <div class="dialog-buttons">
