added project input

--- a/src/template.html
+++ b/src/template.html
@@ -93,6 +93,13 @@
                      </button>
                   </div>
                   <div class="sidebar-projects-section--project-page-container">
+                     <div class="project-dialog-container">
+                        <dialog class="project-dialog">
+                           <input type="text" class="project-name-input">
+                           <button class="project-input-cancel-btn">Cancel</button>
+                           <button class="project-input-submit-btn">Add Project</button>
+                        </dialog>
+                     </div>
                      <div class="sidebar-projects-section--project-page sidebar-page">Placeholder</div>
                      <div class="sidebar-projects-section--project-page sidebar-page">Placeholder</div>
                      <div class="sidebar-projects-section--project-page sidebar-page">Placeholder</div>
@@ -112,8 +119,8 @@
          </div>
 
          <!-- ! DIALOG -->
-         <dialog class="dialog">
-            <div class="dialog-wrapper">
+         <dialog class="task-dialog">
+            <div class="task-dialog-wrapper">
                <div class="form">
                   <div class="task-title-input-container">
                      <input class="task-title-input" required type="text" name="name" id="name" placeholder="Task Title" />
