--- a/src/template.html
+++ b/src/template.html
@@ -133,9 +133,9 @@
                      <div class="priority-input-container">
                         Priority:
                         <select class="priority-input">
-                           <option value="LOW">LOW</option>
-                           <option value="MEDIUM">MEDIUM</option>
-                           <option value="HIGH">HIGH</option>
+                           <option value="LOW" class="priority-low">LOW</option>
+                           <option value="MEDIUM" class="priority-medium">MEDIUM</option>
+                           <option value="HIGH" class="priority-high">HIGH</option>
                         </select>
                      </div>
                      <div class="project-input-container">
