--- a/src/template.html
+++ b/src/template.html
@@ -47,6 +47,30 @@
                     <div class="sidebar-tasks-section">
                         <div class="sidebar-tasks-section--task-page-container">
                             <div
+                                class="sidebar-tasks-section--all-tasks-page sidebar-page"
+                            >
+                                <div class="sidebar-tasks--page-label">
+                                    <div
+                                        class="sidebar-tasks-section--all-tasks-icon icon-container"
+                                    >
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            viewBox="0 0 24 24"
+                                        >
+                                            <title>format-list-bulleted</title>
+                                            <path
+                                                d="M7,5H21V7H7V5M7,13V11H21V13H7M4,4.5A1.5,1.5 0 0,1 5.5,6A1.5,1.5 0 0,1 4,7.5A1.5,1.5 0 0,1 2.5,6A1.5,1.5 0 0,1 4,4.5M4,10.5A1.5,1.5 0 0,1 5.5,12A1.5,1.5 0 0,1 4,13.5A1.5,1.5 0 0,1 2.5,12A1.5,1.5 0 0,1 4,10.5M7,19V17H21V19H7M4,16.5A1.5,1.5 0 0,1 5.5,18A1.5,1.5 0 0,1 4,19.5A1.5,1.5 0 0,1 2.5,18A1.5,1.5 0 0,1 4,16.5Z"
+                                            />
+                                        </svg>
+                                    </div>
+                                    <div
+                                        class="sidebar-tasks-section--all-tasks-text"
+                                    >
+                                        All Tasks
+                                    </div>
+                                </div>
+                            </div>
+                            <div
                                 class="sidebar-tasks-section--today-page sidebar-page"
                             >
                                 <div class="sidebar-tasks--page-label">
@@ -146,7 +170,7 @@
 
             <!-- ! TASK VIEW -->
             <div class="task-view-container">
-                <div class="task-view-title">Project Title</div>
+                <div class="task-view-title">Today</div>
                 <div class="task-container">
                     <!-- Tasks get added here -->
                 </div>
