changed UI and added animations

--- a/src/template.html
+++ b/src/template.html
@@ -7,36 +7,8 @@
     </head>
     <body>
         <div class="body-wrapper">
-            <!-- ! ADD TASK BUTTON -->
-            <button class="add-task-button">
-                <div class="add-task-button--text">Add Task</div>
-                <div class="add-task-button--plus-icon icon-container">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <title>plus-circle</title>
-                        <path
-                            d="M17,13H13V17H11V13H7V11H11V7H13V11H17M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
-                        />
-                    </svg>
-                </div>
-            </button>
-
             <!-- ! SIDEBAR -->
             <div class="sidebar">
-                <div class="sidebar-top">
-                    <div class="sidebar-top--title">TODO</div>
-                    <div class="sidebar-top--menu-icon icon-container">
-                        <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 24 24"
-                        >
-                            <title>menu</title>
-                            <path
-                                d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
-                            />
-                        </svg>
-                    </div>
-                </div>
-
                 <div class="sidebar-section-container">
                     <div
                         class="sidebar-section--header sidebar-tasks-section--header"
@@ -164,6 +136,25 @@
                         >
                             <!-- Projects get added here -->
                         </div>
+                    </div>
+
+                    <div class="add-task-button-container">
+                        <button class="add-task-button">
+                            <div class="add-task-button--text">Add Task</div>
+                            <div
+                                class="add-task-button--plus-icon icon-container"
+                            >
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24"
+                                >
+                                    <title>plus-circle</title>
+                                    <path
+                                        d="M17,13H13V17H11V13H7V11H11V7H13V11H17M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
+                                    />
+                                </svg>
+                            </div>
+                        </button>
                     </div>
                 </div>
             </div>
